--- a/roles/prerequis/tasks/main.yml
+++ b/roles/prerequis/tasks/main.yml
@@ -7,4 +7,4 @@
   authorized_key:
    user: root
    state: present
-   key: "{{ lookup('file', '/home/root/.ssh/id_rsa.pub') }}"
+   key: "{{ lookup('file', '/root/.ssh/id_rsa.pub') }}"
